--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -152,7 +152,9 @@ jobs:
       - name: release(${{ inputs.scheme }}/${{ env.resAnnot }})
         if: inputs.storage == 'release'
         run: |
-          alias gh='GH_TOKEN=${{ secrets.GITHUB_TOKEN }} gh'
+          gh {
+            GH_TOKEN=${{ github.token }} gh "$@"
+          }
           find "$resScheme/(upqueue)" -name "$resAnnot.cejs-*.log.zst" \
                                    -o -name "$resAnnot.dataset.zz" -print0 | \
           {
