--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -151,10 +151,9 @@ jobs:
           fi
       - name: release(${{ inputs.scheme }}/${{ env.resAnnot }})
         if: inputs.storage == 'release'
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
-          gh() {
-            GH_TOKEN=${{ github.token }} env gh "$@"
-          }
           find "$resScheme/(upqueue)" -name "$resAnnot.cejs-*.log.zst" \
                                    -o -name "$resAnnot.dataset.zz" -print0 | \
           {
