--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -161,5 +161,5 @@ jobs:
               gh release create "$resScheme/$resAnnot" -p --target 63da79a3e51fc466a4a9f5629c8f125bb87bc653 -R "$GITHUB_REPOSITORY" <&-
               requireCreateTag=0
             fi
-            xargs -0r gh release upload "$resScheme/$resAnnot"
+            xargs -0rI@@ gh release upload "$resScheme/$resAnnot" @@ -R "$GITHUB_REPOSITORY"
           }
