--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -73,7 +73,7 @@ jobs:
 
           cd '(upqueue)'
           find -maxdepth 1 -type f -name '*.cpio' -print0 | \
-          time xargs -0r zstdmt -q --ultra -21 --rm --
+          time xargs -0r zstdmt -q --rm --
 
           resAnnot="$(printf %s "$resAnnot" | sed -ze 's%[\n]% %g' | sed -Ee 's|[/. ~^?*]|-|g;s|@|()|g;s%\[%(%g;s%\]%)%g' | sed -Ee 's%^-+%%')"
           if [[ -z "$resAnnot" ]]; then
