--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -54,10 +54,11 @@ jobs:
           declare +x -a resIdsArr=($(printf '%s' "$resIds" | sed -sEe 's%[,; ]+%\n%g' | grep -Ee '^[0-9]+$'))
           declare +x -a okIdsArr=() errIdsArr=()
 
+          set -x
           if [[ "$resParallel" -gt 1 ]]; then
             mkdir "$resScheme/(upqueue)/.rec" cache
 
-            printf '%s\0' "${resIdsArr[@]}" | xargs -0rL1 -P"$resParallel" bash -c '
+            printf '%s\0' "${resIdsArr[@]}" | xargs -0rL1 -P"$resParallel" bash -xc '
               sleep 0.$RANDOM
               if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejs_c/comic.*/"$resScheme".js "$0" archive_images=false; then
                 touch "$resScheme/(upqueue)/.rec/ok.$0"
