--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,11 @@
-default:
-  image: busybox:stable-glibc
-
-stages:
-  - setup-runtimes
-  - cejs
-  - upload
-
-setup:
-  stage: setup-runtimes
+all-in-one-step:
+  image: node:lts
+  before_script:
+    - if ! [[ -d .bin ]]; then mkdir .bin; fi
+    - if ! [[ -x .bin/gh ]]; then declare ghVerTag="$(curl -LH "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/cli/cli/releases/latest | jq -r .tag_name)"; ghVerTag="${ghVerTag:-v2.20.2}"; curl -L https://github.com/cli/cli/releases/download/"${ghVerTag}"/gh_"${ghVerTag#v}"_linux_amd64.tar.gz | tar -xf - -C .bin --strip-components=2 gh_"${ghVerTag#v}"_linux_amd64/bin/gh; fi
+  cache:
+    - key: runtime-binaries
+      paths:
+        - .bin
   script:
-    - echo a > b
-
-crawl:
-  stage: cejs
-  script:
-    - cat b
+    - true
