--- a/.github/workflows/cejs.yml
+++ b/.github/workflows/cejs.yml
@@ -1,4 +1,4 @@
-name: cejs
+name: artwork
 on:
   workflow_dispatch:
     inputs:
@@ -8,22 +8,38 @@ on:
         type: choice
         required: true
         options:
-          - u17
-        default: u17
+          - dongman
+          - webtoon
+          - pufei
+        default: dongman
       storage:
         type: choice
         required: true
         options:
-          - cloud189
           - release
         default: release
       annot:
       parallel:
+        default: 1
 run-name: ${{ inputs.scheme }}/${{ inputs.annot }}
 defaults:
   run:
     shell: bash
-concurrency: u17
+concurrency: cejs
+permissions:
+  actions: read
+  checks: none
+  contents: write
+  deployments: none
+  id-token: none
+  issues: none
+  discussions: none
+  packages: none
+  pages: none
+  pull-requests: none
+  repository-projects: none
+  security-events: none
+  statuses: write
 env:
   resIds: ${{ inputs.ids }}
   resScheme: ${{ inputs.scheme }}
@@ -38,6 +54,7 @@ jobs:
     steps:
       - name: cache.npm(cejs_c)
         uses: actions/cache@v3
+          #if: inputs.scheme == 'cejs'
         with:
           path: cejs_c
           key: node_modules-cejs_c-${{ env.cejsVer }}_${{ env.cejsEpoch }}
@@ -52,7 +69,7 @@ jobs:
 
           mkdir -p "$resScheme/(upqueue)"
 
-          declare +x -a resIdsArr=($(printf '%s' "$resIds" | sed -sEe 's%[,; ]+%\n%g' | grep -Ee '^[0-9]+$'))
+          declare +x -a resIdsArr=($(printf '%s' "$resIds" | sed -sEe 's%;+%\n%g'))
           declare +x -a okIdsArr=() errIdsArr=()
 
           if [[ "$resParallel" -gt 1 ]]; then
@@ -60,7 +77,7 @@ jobs:
 
             printf '%s\0' "${resIdsArr[@]}" | xargs -0rL1 -P"$resParallel" bash -c '
               sleep 0.$RANDOM
-              if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejs_c/comic.*/"$resScheme".js "$0" archive_images=false && ls -1 -- "$resScheme" | grep -qe "^$0 .\+"
+              if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejs_c/comic.cmn*/"$resScheme".js "$0" archive_images=false && ls -1 -- "$resScheme" | grep -qe "^$0 .\+"
               then
                 touch "$resScheme/(upqueue)/.rec/ok.$0"
               else
@@ -84,14 +101,9 @@ jobs:
           set -f
 
           resAnnot="$(printf %s "$resAnnot" | sed -ze 's%[\n]% %g' | sed -Ee 's|[/. ~^?*]|-|g;s|@|()|g;s%\[%(%g;s%\]%)%g' | sed -Ee 's%^-+%%')"
-          if [[ -z "$resAnnot" ]]; then
-            resAnnot="$(TZ=Asia/Shanghai date +%Y%m%d%H%M%S)"
-          fi
-          echo resAnnot=$resAnnot >> $GITHUB_ENV
-
           cd "$resScheme"
-          declare +x walkWorkDir walkWorkId
-          for walkWorkDir in $(find . -maxdepth 1 -type d -regex './[1-9][0-9]* .*'); do
+          declare +x walkWorkDir walkWorkId workdirs=($(find . -maxdepth 1 -type d -regex './[-_a-zA-Z0-9]* .*'))
+          for walkWorkDir in "${workdirs[@]}"; do
             walkWorkId="$(basename -- "$walkWorkDir" | sed -zEe 's%^([0-9]+) .*%\1%')"
             if find "$walkWorkDir" -type f -print0 | sed -zEe 's%\./%%' | LC_ALL=C sort -zt/ | cpio -o0cC1 -R +0:+0 --reproducible --quiet > "(upqueue)/$walkWorkId.cpio-ing"; then
               mv -T -- "(upqueue)/$walkWorkId."cpio{-ing,}
@@ -99,9 +111,17 @@ jobs:
             fi
           done
 
+          if [[ -z "$resAnnot" ]]; then
+            resAnnot="$(TZ=Asia/Shanghai date +%Y%m%d%H%M%S)."
+            if [[ ${#workdirs} -eq 1 ]]; then
+              resAnnot="$resAnnot/$(basename -- "${workdirs[0]}" | sed -zEe 's%^[^ ]+ (.+)%\1%')"
+            fi
+          fi
+          echo resAnnot=$resAnnot >> $GITHUB_ENV
+
           cd '(upqueue)'
           find -maxdepth 1 -type f -name '*.cpio' -print0 | \
-          time xargs -0r zstdmt -q --zstd=hlog=30 --rm --
+          time xargs -0r zstdmt --ultra -21 -q --zstd=hlog=30 --rm --
 
           if [[ "$resStor" == release ]]; then
             declare +x sumsize="$(du -bS --apparent-size | cut -f1)"
