--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,7 @@ on:
         default: release
         options:
           - release
-run-name: 'update('${{ inputs.resid }}'#'${{ inputs.resannot }}')'
+run-name: 'update('${{ inputs.resid }}${{ inputs.resannot > 0 && '#' }}${{ inputs.resannot }}')'
 defaults:
   run:
     shell: bash
@@ -38,167 +38,8 @@ permissions:
   repository-projects: none
   security-events: none
   statuses: write
-env:
-  resIds: ${{ inputs.ids }}
-  resScheme: ${{ inputs.scheme }}
-  resStor: ${{ inputs.storage }}
-  resAnnot: ${{ inputs.annot }}
-  resParallel: ${{ inputs.parallel }}
-  cejsVer: latest
-  cejsEpoch: 1
 jobs:
   in-one-go:
     runs-on: ubuntu-latest
     steps:
-      - name: cache.npm(cejs_c)
-        uses: actions/cache@v3
-          #if: inputs.scheme == 'cejs'
-        with:
-          path: cejs_c
-          key: node_modules-cejs_c-${{ env.cejsVer }}_${{ env.cejsEpoch }}
-      - name: main()
-        run: |
-          IFS=$'\n'
-
-          if ! [[ -d cejs_c ]]; then
-            git clone -qb flos --depth 1 --single-branch https://github.com/flosnvjx/work_crawler.git/ cejs_c
-            env -C cejs_c -- npm install --silent cejs
-          fi
-
-          mkdir -p "$resScheme/(upqueue)"
-
-          declare +x -a resIdsArr=($(printf '%s' "$resIds" | sed -sEe 's%;+%\n%g'))
-          declare +x -a okIdsArr=() errIdsArr=()
-
-          if [[ "$resParallel" -gt 1 ]]; then
-            mkdir "$resScheme/(upqueue)/.rec" cache
-
-            printf '%s\0' "${resIdsArr[@]}" | xargs -0rL1 -P"$resParallel" bash -c '
-              sleep 0.$RANDOM
-              if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejs_c/comic.cmn*/"$resScheme".js "$0" archive_images=false && find "$resScheme" -maxdepth 1 -name "*${0}*" -type d
-              then
-                touch "$resScheme/(upqueue)/.rec/ok.$0"
-              else
-                touch "$resScheme/(upqueue)/.rec/err.$0"
-              fi
-            '
-            okIdsArr+=($(env -C "$resScheme/(upqueue)/.rec" find -maxdepth 1 -type f -size 0 -print | sed -ne '/^\.\/ok\../p' | sed -e 's%^\./ok\.%%' | sort -u))
-            errIdsArr+=($(env -C "$resScheme/(upqueue)/.rec" find -maxdepth 1 -type f -size 0 -print | sed -ne '/^.\/err\../p' | sed -e 's%^\./err\.%%' | sort -u))
-            rm -rf "$resScheme/(upqueue)/.rec"
-          else
-            for walkId in "${resIdsArr[@]}"; do
-              if NODE_TLS_REJECT_UNAUTHORIZED=0 node cejs_c/comic.*/"$resScheme".js "$walkId" archive_images=false && find "$resScheme" -maxdepth 1 -name "*${walkid}*" -type d
-              then
-                okIdsArr+=("$walkId")
-              else
-                errIdsArr+=("$walkId")
-              fi
-            done
-          fi
-
-          set -f
-
-          resAnnot="$(printf %s "$resAnnot" | sed -ze 's%[\n]% %g' | sed -Ee 's|[/. ~^?*]|-|g;s|@|()|g;s%\[%(%g;s%\]%)%g' | sed -Ee 's%^-+%%')"
-          cd "$resScheme"
-          declare +x walkWorkDir walkWorkId workdirs=($(find . -maxdepth 1 -type d)
-          for walkWorkDir in "${workdirs[@]}"; do
-            walkwdbn="$(basename -- "$walkWorkDir")"
-            if find "$walkWorkDir" -type f -print0 | sed -zEe 's%\./%%' | LC_ALL=C sort -zt/ | cpio -o0cC1 -R +0:+0 --reproducible --quiet > "(upqueue)/$walkwdbn.cpio-ing"; then
-              mv -T -- "(upqueue)/$walkwdbn."cpio{-ing,}
-              rm -rf -- "$walkWorkDir"
-            fi
-          done
-
-          if [[ -z "$resAnnot" ]]; then
-            resAnnot="$(TZ=Asia/Shanghai date +%Y%m%d%H%M%S)."
-            if [[ ${#workdirs} -eq 1 ]]; then
-              resAnnot="$resAnnot/"$(basename -- "${workdirs[0]}" | sed -ze 's%[\n]% %g' | sed -Ee 's|[/. ~^?*]|-|g;s|@|()|g;s%\[%(%g;s%\]%)%g' | sed -Ee 's%^-+%%')"
-            fi
-          fi
-          echo resAnnot=$resAnnot >> $GITHUB_ENV
-
-          cd '(upqueue)'
-          find -maxdepth 1 -type f -name '*.cpio' -print0 | \
-          time xargs -0r zstdmt --ultra -21 -q --zstd=hlog=30 --rm --
-
-          if [[ "$resStor" == release ]]; then
-            declare +x sumsize="$(du -bS --apparent-size | cut -f1)"
-            if [[ "$sumsize" -lt 1048576000 ]]; then
-              7za a -tzip -mx=0 -bsp0 -bso0 -sae -sdel -- "$resAnnot.dataset.zz" '*.cpio.zst'
-            else
-              7za a -tzip -v1048576000b -mx=0 -bsp0 -bso0 -sae -sdel -- "$resAnnot.dataset.zz" '*.cpio.zst'
-            fi
-          fi
-          if [[ ${#okIdsArr[@]} -gt 0 ]]; then
-            printf '%s\n' "${okIdsArr[@]}" | zstd -qo "$resAnnot".cejs-ok."$(date +%s)".log.zst
-          fi
-          if [[ ${#errIdsArr[@]} -gt 0 ]]; then
-            printf '%s\n' "${errIdsArr[@]}" | zstd -qo "$resAnnot".cejs-err."$(date +%s)".log.zst
-          fi
-      - name: cache.go(cloud189)
-        if: inputs.storage == 'cloud189'
-        uses: actions/cache@v3
-        with:
-          path: ~/go/bin/cloud1*
-          key: go-bin-cloud189
-      - name: go(cloud189)
-        if: inputs.storage == 'cloud189'
-        run: |
-          if ! [[ -x ~/go/bin/cloud189 ]]; then
-            go install github.com/gowsp/cloud189/cmd/cloud189@latest
-          fi
-      - name: cloud189()
-        if: inputs.storage == 'cloud189'
-        env:
-          CLOUD189_CONFIGTEXT: ${{ secrets.CLOUD189_CONFIGTEXT }}
-        run: |
-          declare +x f=
-
-          mkdir -p ~/.config/cloud189
-          printf %s "$CLOUD189_CONFIGTEXT" | jq -cr . | tee > ~/.config/cloud189/config.json
-
-          cloud189() {
-            ~/go/bin/cloud189 "${@}"
-          }
-
-          upload189() {
-            if [[ $# -gt 1 ]]; then
-              local +x remote="$1"
-              shift
-            else
-              local +x remote="/apps/artwork/$resScheme"
-            fi
-            while [[ $# -gt 0 ]]; do
-              local fsz="$(stat -c "%s" -- "$1")"
-              if cloud189 up "$1" "$remote" | tail -1 | tee /dev/stderr | grep -qe 'upload complete'; then
-                printf '%s\n' "cloud189($1): $fsz"
-              else
-                printf '%s\n' "cloud189($1): $fsz FAILURE"
-                return 1
-              fi
-              shift
-            done
-          }
-
-          cd "$resScheme/(upqueue)"
-          upload189 "/apps/artwork/$resScheme" "$resAnnot.cejs-"*.log.zst || exit
-          declare +x f=
-          if find . -name "*.cpio.zst" &>/dev/null; then
-            for f in *.cpio.zst; do
-              upload189 "$f" || break
-              rm -- "$f"
-            done
-          fi
-      - name: release(${{ inputs.scheme }}/${{ env.resAnnot }})
-        if: inputs.storage == 'release'
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          if ! gh release view "$resScheme/$resAnnot" &>/dev/null; then
-            gh release create "$resScheme/$resAnnot" -p --target 63da79a3e51fc466a4a9f5629c8f125bb87bc653 -F /dev/null --title "$resScheme/$resAnnot" -R "$GITHUB_REPOSITORY"
-          fi
-          find "$resScheme/(upqueue)" '(' \
-               -name "$resAnnot.cejs-*.log.zst" \
-            -o -name "$resAnnot.dataset.zz*" \
-            ')' -print0 | \
-          xargs -0rI@@ gh release upload "$resScheme/$resAnnot" @@ --clobber -R "$GITHUB_REPOSITORY"
+      - run: echo a
